objects/LLC_BI__System_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A set of key-value pairs that can be used to set organization-wide parameters</description>
    <fields>
        <fullName>LLC_BI__Category_Name__c</fullName>
        <description>This field is required. It is manually populated. It indicates the category of the system property. The combination of the category and the key is used to uniquely identify the system property.</description>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is manually populated. It describes the system property in more depth.</description>
        <inlineHelpText>Description of the custom setting implemented in order to describe the Category and System Property.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required. It is manually populated. It indicates if the system property is active. If the system property is not active, it will not be used.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Key__c</fullName>
        <description>This field is required. It is manually populated. The combination of the category and the key is used to uniquely identify the system property.</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This field is required. It is manually populated. It indicates the value of the system property.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>System Properties</label>
    <listViews>
        <fullName>Memo_Configuration</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Category_Name__c</columns>
        <columns>LLC_BI__Description__c</columns>
        <columns>LLC_BI__Is_Active__c</columns>
        <columns>LLC_BI__Key__c</columns>
        <columns>LLC_BI__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Category_Name__c</field>
            <operation>contains</operation>
            <value>MEMO</value>
        </filters>
        <label>Memo Configuration</label>
        <language>en_US</language>
    </listViews>
</CustomObject>